# Agent-Workflow

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  main.py
app/agents/: __init__.py  definitions.py
app/observability/: __init__.py  langfuse.py
app/orchestration/: __init__.py  workflow.py
app/schemas/: __init__.py  models.py
app/tools/: __init__.py  command_runner.py  file_ops.py  repo_reader.py
docker/langfuse/: .env.example  README.md
examples/demo_project/: app.py  test_app.py
tests/: test_command_runner.py  test_file_ops.py
